# rust_lab2

./: Cargo.toml  tasks.json
src/: main.rs
templates/: index.html.tera
