[package]
name = "Rust_lab2"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
jsonwebtoken = "8.2"
bcrypt = "0.11.0"